@@ -1,3 +1,9 @@
+2018-04-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/include/stdint.h,
+	  support/regression/tests/wchar.c:
+	  Fix wchar_t, wint_t limit macros.
+
 2018-04-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* support/regression/tests/wchar.c:
